--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
-logo: # add logo name
-title: Bef - Enjoy Freedom
+logo: # Turner's
+title: Welcome to the Turner household!
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Just a landing page to say high and thanks for visiting
 permalink: ':title/'
 #baseurl: "/bef" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Banner settings
-video: mountains.mp4 # add banner video. Add your video file to the folder video
+video: TP.mp4 # add banner video. Add your video file to the folder video
 banner-title: # add banner title
 banner-desc: # add banner description
 
@@ -18,7 +16,7 @@ author-pic: face.jpg # your photo
 author-name: # your name
 about-author: # about author
 email: your-email@domain.com # your email
-phone: (496)-169-6557 # your pnone number
+phone: (678)-602-7981 # your pnone number
 website: https://dwayne.example.com # you website
 
 # Social link
